rebrand: rename Gister to GISTer across web app and extension

--- a/extension/popup/auth.html
+++ b/extension/popup/auth.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connect to Gister</title>
+    <title>Connect to GISTer</title>
     <link rel="stylesheet" href="popup.css">
     <style>
         .auth-container {
@@ -109,8 +109,8 @@
 <body>
     <div class="auth-container">
         <div class="auth-header">
-            <h1>🔐 Connect to Gister</h1>
-            <p>Sign in with your Gister account to sync listings</p>
+            <h1>🔐 Connect to GISTer</h1>
+            <p>Sign in with your GISTer account to sync listings</p>
         </div>
 
         <form class="auth-form" id="authForm">
@@ -135,7 +135,7 @@
         </form>
 
         <div class="help-text">
-            Don't have an account? <a href="https://gistlist.abacusai.app/auth/signup" target="_blank">Sign up on Gister</a>
+            Don't have an account? <a href="https://gistlist.abacusai.app/auth/signup" target="_blank">Sign up on GISTer</a>
         </div>
     </div>
 
