--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>Gister</h1>
+            <h1>GISTer</h1>
             <p class="tagline">AI-Powered Reseller Assistant</p>
             <div class="auth-status" id="authStatus"></div>
         </div>
@@ -19,7 +19,7 @@
         <!-- Data Sync Section -->
         <div class="sync-section">
             <div class="sync-controls">
-                <button id="syncFromApp" class="btn btn-primary">Sync from Gister App</button>
+                <button id="syncFromApp" class="btn btn-primary">Sync from GISTer App</button>
                 <button id="refreshData" class="btn btn-secondary">Refresh</button>
             </div>
             <div class="sync-status" id="syncStatus">
@@ -32,7 +32,7 @@
             <h3>Available Listings <span id="listingCount" class="count">0</span></h3>
             <div id="listingsContainer" class="listings-container">
                 <div class="empty-state" id="emptyState">
-                    <p>No listings found. Sync your listings from the Gister app to get started.</p>
+                    <p>No listings found. Sync your listings from the GISTer app to get started.</p>
                     <button class="btn btn-primary" onclick="document.getElementById('syncFromApp').click()">Sync Listings</button>
                 </div>
             </div>
